# TossterCommander

./: .gitignore  CMakeLists.txt  CoreFlashMaker.cpp  CoreFlasher.cpp  CoreFlasher.tos  Coretemplate.rc  LICENSE  README.md  TosFlashMaker.cpp  TosFlasher.cpp  TosFlasher.tos  TosSwitcher.cpp  TossterMaker.cpp  Tostemplate.rc  kgflags.h  main.cpp  printf.c  template.rc  tosster.cpp
platform/: common.cpp  platform.h
platform/pc/: platform.cpp  tosster.cpp
platform/st/: core_image.s  platform.s  startup.s  tos_image.s
platform/st/modules/: CMakeCInformation.cmake  CMakeCXXInformation.cmake  CMakeDetermineVASM68KCompiler.cmake  CMakeTestCCompiler.cmake  CMakeTestCXXCompiler.cmake  CMakeTestVASM68KCompiler.cmake  CMakeVASM68KCompiler.cmake.in  CMakeVASM68KInformation.cmake  m68k-elf-win.cmake
